# ai-pylogue

./: README.md  pyproject.toml
docs/: canvas_alpha.md  canvas_alpha_handoff.md  canvas_system_review_2026-02-17.md  kitchen_audit_ui_action_runtime.md
docs/canvas/: websocket-state-transitions.md
docs/feat/: intelligent-canvas.md
overrides/: mermaid-config.js
scripts/agents/: haiku.py
scripts/examples/ai/agno/: f1_app.py  iirm_app.py
scripts/examples/ai/pydanticai/: basic.py  defects_enriched.csv  ipl_app.py  manufacturing_data_app.py  optinn_app.py
scripts/examples/canvas/: main.py  main.store.json
scripts/examples/chat_app_with_histories/: main.py
scripts/examples/chat_app_with_histories/static/: chat_app.css
src/canvas/: agent_pack.py  components.py  crud.py  data.py  main.py  state.py
src/canvas/static/: canvas-ws.js  canvas.css  canvas.js
src/pylogue/: canvas.py  core.py  dashboarding.py  embeds.py  shell.py
src/pylogue/integrations/: agno.py  common.py  pydantic_ai.py
src/pylogue/static/: chat_app.css  chat_app.js  pylogue-canvas.css  pylogue-canvas.js  pylogue-core.css  pylogue-core.js  pylogue-markdown.js
